# KerberosAuthentication

./: CMakeLists.txt  README.md  STRUCTURE.md  main.py  models.py  utils.py
KDC_database/: database_engine.py  database_entity.py
as_server/: __init__.py  as_crypto.py  as_engine.py  as_entity.py
client/: client_crypto.py  client_engine.py  client_entity.py
database/: database_crypto.py  database_engine.py  database_entity.py
include/: as_server.h  crypto_utils.h  kdc_database.h  kerberos_client.h  messages.h  service_server.h  tgs_server.h
service_server/: __init__.py  service_crypto.py  service_engine.py  service_entity.py
shared/: utils.py
src/: as_server.cpp  crypto_utils.cpp  kdc_database.cpp  kerberos_client.cpp  main.cpp  messages.cpp  service_server.cpp  tgs_server.cpp
tgs_server/: __init__.py  tgs_crypto.py  tgs_engine.py  tgs_entity.py
